HeaderRowOverlay: remove overflow-x due to buggy overflow-y behavior

--- a/components/datagrid/HeaderRowOverlay/theme.css
+++ b/components/datagrid/HeaderRowOverlay/theme.css
@@ -7,6 +7,5 @@
   left: 48px;
   right: 0;
   height: 48px;
-  overflow-x: auto;
   z-index: 3;
 }
